--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "jsonwebtoken": "8.5.1",
-      "bcrypt": "5.0.1",
-      "express": "4.17.1",
-      "nodemon": "2.0.7",
-      "sqlite": "4.0.19",
-      "sqlite3": "5.0.2"
+        "bcrypt": "5.0.1",
+        "express": "4.17.1",
+        "jsonwebtoken": "8.5.1",
+        "sqlite": "4.0.19",
+        "sqlite3": "5.0.2"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
     }
 }
