--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
-    "author": "",
+    "author": "Akash Nithish",
     "license": "ISC",
     "dependencies": {
         "bcrypt": "5.0.1",
