--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
     "main": "app.js",
     "author": "Akash Nithish",
     "license": "ISC",
+    "scripts": {
+        "start": "nodemon demoAuthentication.js"
+    },
     "dependencies": {
+        "axios": "^1.4.0",
         "bcrypt": "5.0.1",
-        "express": "4.17.1",
-        "jsonwebtoken": "8.5.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.1",
+        "node-fetch": "^3.3.2",
         "sqlite": "4.0.19",
-        "sqlite3": "5.0.2"
+        "sqlite3": "^5.1.6"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
